oem/ingress/deployments/stg/svc-nodeport-stg.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
#  - port: 3306
#    name: tcp-mysql
#  - port: 27017
#    name: tcp-mongodb
  selector:
    app: nginx-ingress-rc
