oem/ingress/deployments/stg/ingress-stg.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bpix-stg
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.org/client-max-body-size: "1024m"
spec:
  tls:
  - hosts:
    - staging.bixplatform-ix.com
    secretName: bpix-secret
  - hosts:
    - staging-lp.bixplatform-ix.com
    secretName: lbpix-secret
#  - hosts:
#    - staging-admin.bixplatform-ix.com
#    secretName: lbpix-secret
  rules:
  - host: staging-lp.bixplatform-ix.com
    http:
      paths:
      - backend:
          serviceName: b-eee-lp
          servicePort: 80  
  - host: staging.bixplatform-ix.com
    http:
      paths:
      - backend:
          serviceName: beee-ui
          servicePort: 80
