oem/ingress/deployments/stg/linker-stg.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linker-prod
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.org/client-max-body-size: "100m"
spec:
#  tls:
#  - secretName: linker-secret
#    hosts:
#    - ss-www.b-eee.io
#    - ss.b-eee.io
  rules:
  - host: ss-www.b-eee.io
    http:
      paths:
      - backend:
          serviceName: b-eee-lp
          servicePort: 80
  - host: ss.b-eee.io
    http:
      paths:
      - backend:
          serviceName: beee-ui
          servicePort: 80
  - host: ss-nfj.b-eee.io
    http:
      paths:
      - backend:
          serviceName: a-neo4j-0
          servicePort: 80
#  - host: ss-minio.b-eee.io
#    http:
#      paths:
#      - backend:
#          serviceName: a-minio-1
#          servicePort: 80
#      - backend:
#          serviceName: a-minio-1-api
#          servicePort: 9000

      # - backend:
      #     serviceName: a-nsq-1
      #     servicePort: 4150
      # - backend:
      #     serviceName: nsqlookup
      #     servicePort: 4161
